[package]
name = "patricia_tree"
version = "0.9.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Memory-efficient data structures based on patricia tree"
homepage = "https://github.com/sile/patricia_tree"
repository = "https://github.com/sile/patricia_tree"
readme = "README.md"
keywords = ["patricia", "radix", "trie", "no_std"]
categories = ["data-structures"]
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
noargs = "0.4.1"
rand = "0.9"
serde_json = { version = "1" }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "insert_lines"
path = "examples/insert_lines.rs"
