[package]
name = "patricia_tree"
version = "0.10.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Memory-efficient data structures based on patricia tree"
homepage = "https://github.com/sile/patricia_tree"
repository = "https://github.com/sile/patricia_tree"
readme = "README.md"
keywords = ["patricia", "radix", "trie"]
categories = ["data-structures", "no-std"]
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.7.0"
noargs = "0.4.1"
rand = "0.9"
serde_json = { version = "1" }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "insert_lines"
path = "examples/insert_lines.rs"

[[bench]]
name = "bench"
harness = false
